# Interactive-Mousepad

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
public/: model.glb
public/skins/nebula/: Nebula VFX.pck  index.html
public/skins/paint_splatter/: Paint splatter skin.pck  index.html
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SkinPreview.tsx
src/components/device/: DevicePanel.tsx  MockToggle.tsx
src/components/display/: DisplayControls.tsx  DisplayPreview.tsx  LayerStack.tsx  ModelViewer.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/legends/: LegendItem.tsx  LegendsEditor.tsx
src/components/overlays/: OverlayBrowser.tsx  OverlayCard.tsx
src/components/plugins/: PluginList.tsx  PluginRow.tsx
src/components/profiles/: ProfileDetail.tsx  ProfileList.tsx  ProfilesPage.tsx
src/components/shared/: Button.tsx  IconButton.tsx  Slider.tsx  Toggle.tsx
src/components/skins/: SkinBrowser.tsx  SkinCard.tsx  SkinFilters.tsx  SkinUpload.tsx
src/context/: DeviceContext.tsx  DisplayContext.tsx  LayerContext.tsx  LogContext.tsx  NavigationContext.tsx  OverlayContext.tsx  ProfileContext.tsx  SkinContext.tsx  persist.ts
src/data/: overlays.ts  plugins.ts  profiles.ts  skins.ts
src/types/: device.ts  index.ts  layer.ts  legend.ts  overlay.ts  profile.ts  skin.ts
(+7 files in other folders)
