[package]
name = "mousepad-controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "mousepad_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2.6.6"
serialport = "4.9.0"
